trunk/Archive2/d5/a8fdfc9783014c/output
+ g++-4.9 -std=c++11 -Wall -Wextra -Wconversion -Wnarrowing -Wundef -pedantic -fno-builtin -O3 -pthread main.cpp
main.cpp:4:46: error: call to non-constexpr function 'double cos(double)'
       static constexpr double a = std::cos(3.);
                                              ^
main.cpp:5:46: error: call to non-constexpr function 'double exp(double)'
       static constexpr double c = std::exp(3.);
                                              ^
main.cpp:6:46: error: call to non-constexpr function 'double log(double)'
       static constexpr double d = std::log(3.);
                                              ^
main.cpp:7:48: error: call to non-constexpr function 'double asin(double)'
       static constexpr double e1 = std::asin(1.);
                                                ^
main.cpp:8:47: error: call to non-constexpr function 'double sqrt(double)'
       static constexpr double h = std::sqrt(.1);
                                               ^
main.cpp:9:53: error: call to non-constexpr function 'double pow(double, double)'
       static constexpr double p = std::pow(1.3,-0.75);
                                                     ^
main.cpp:10:48: error: call to non-constexpr function 'double sinh(double)'
       static constexpr double es = std::sinh(1.);
                                                ^
main.cpp:11:48: error: call to non-constexpr function 'double cosh(double)'
       static constexpr double ec = std::cosh(1.);
                                                ^
main.cpp:12:48: error: call to non-constexpr function 'double tanh(double)'
       static constexpr double et = std::tanh(1.);
                                                ^
main.cpp:13:50: error: call to non-constexpr function 'double asinh(double)'
       static constexpr double zs = std::asinh(1.2);
                                                  ^
main.cpp:14:50: error: call to non-constexpr function 'double acosh(double)'
       static constexpr double zc = std::acosh(1.2);
                                                  ^
main.cpp:15:49: error: call to non-constexpr function 'double atanh(double)'
       static constexpr double zt = std::atanh(.5);
                                                 ^
